[project]
name = "ttn_client"
version = "1.1.0"
authors = [
  { name="Angel Nunez Mencias", email="pypi@angelnu.com" },
]
description = "A python client to fetch/receive and parse uplink messages from The Thinks Network"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/angelnu/thethinksnetwork_python_client"
Issues = "https://github.com/angelnu/thethinksnetwork_python_client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
